--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,10 +1,20 @@
 .footer {
-	margin-top: 40px;
+	margin-top: 60px;
 	background-color: #f85555;
 	color: #fff;
-	padding: 30px;
+	padding: 30px 30px 25px 30px;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+}
+.footer .socials {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 30px;
+	margin-top: 10px;
+}
+.footer .socials a {
+	color: #fff;
 }
