--- a/src/styles/nav-bar.css
+++ b/src/styles/nav-bar.css
@@ -1,10 +1,13 @@
 .header {
+	position: sticky;
+	top: 0;
 	display: grid;
 	grid-template-columns: 7fr 5fr;
 	align-items: center;
 	background-color: #fff;
 	border-bottom: 1px solid #e6e6e6;
 	padding: 0 1.5rem;
+	z-index: 1;
 }
 .header h2,
 h3,
@@ -33,6 +36,7 @@ li {
 .header .navegation li {
 	padding-top: 1.5rem;
 	padding-bottom: 1.5rem;
+	color: rgba(0, 0, 0, 0.2);
 }
 
 @media screen and (min-width: 768px) {
@@ -48,7 +52,8 @@ li {
 }
 @media screen and (min-width: 992px) {
 	.header {
-		grid-template-columns: 6fr 6fr;
+		padding-left: 50px;
+		grid-template-columns: 6.5fr 5.5fr;
 	}
 	.header h3 {
 		border: 0.5 solid #e6e6e6;
