--- a/src/styles/empty.css
+++ b/src/styles/empty.css
@@ -1,9 +1,10 @@
 .empty {
 	width: 100%;
 	height: 40vh;
-	margin: 100px;
+	margin: 100px 0;
 }
 .empty img {
+	width: 25vh;
 	margin-bottom: 30px;
 }
 .empty h3 {
