--- a/src/styles/product-details.css
+++ b/src/styles/product-details.css
@@ -19,39 +19,79 @@
 	color: #f85555;
 }
 
-.images {
+.container-slider {
+	max-width: 500px;
+	height: 450px;
+	padding-left: 150px;
+	position: relative;
+	overflow: hidden;
 	display: flex;
 	flex-direction: column;
 	justify-content: start;
 	align-items: center;
 }
-.slider-product {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-.slider-product__arrow {
+.button-slider {
 	width: 40px;
 	height: 40px;
 	background-color: transparent;
 	border: none;
 	color: #f85555;
-}
-.detail-img {
-	max-width: 350px;
-	max-height: 350px;
-	margin-bottom: 30px;
-}
-.thumb-slide {
+	position: absolute;
 	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
+	justify-content: center;
 	align-items: center;
-	gap: 50px;
 }
-.thumb-slide img {
+.slide {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	opacity: 0;
+	transition: opacity 0.4s ease-in-out;
+}
+.slide img {
+	width: 70%;
+	height: 70%;
+	object-fit: contain;
+}
+.active-anim {
+	opacity: 1;
+}
+.prev {
+	top: 50%;
+	left: 20px;
+	transform: translateY(-50%);
+}
+.next {
+	top: 50%;
+	right: 20px;
+	transform: translateY(-50%);
+}
+.thumb-slider {
+	position: absolute;
+	bottom: 5px;
+	left: 50%;
+	transform: translateX(-50%);
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	grid-gap: 60px;
+	align-items: center;
+}
+button.thumb {
+	width: 70px;
+	height: 70px;
+	background-color: transparent;
+	border: 2px solid transparent;
+}
+.thum:hover {
+	cursor: pointer;
+}
+.thumb img {
 	max-width: 60px;
 	max-height: 60px;
+}
+.thumb.active {
+	border: 2px solid #f85555;
+	border-radius: 5px;
 }
 
 .description h2 {
