--- a/src/styles/quantity.css
+++ b/src/styles/quantity.css
@@ -1,6 +1,6 @@
 .quantity {
 	display: flex;
-	justify-content: start;
+	justify-content: flex-start;
 	align-items: center;
 	margin-bottom: 20px;
 }
