--- a/src/styles/product-details.css
+++ b/src/styles/product-details.css
@@ -7,7 +7,7 @@
 }
 .detail-nav {
 	display: flex;
-	justify-content: space-start;
+	justify-content: flex-start;
 	gap: 20px;
 }
 .detail-nav h3 {
@@ -27,7 +27,7 @@
 	overflow: hidden;
 	display: flex;
 	flex-direction: column;
-	justify-content: start;
+	justify-content: flex-start;
 	align-items: center;
 }
 .button-slider {
