--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -35,7 +35,9 @@
 	margin-left: 30px;
 	margin-right: 30px;
 }
-
+.accordion-item {
+	border: none !important;
+}
 @media screen and (min-width: 768px) {
 	.main {
 		display: grid;
@@ -44,6 +46,20 @@
 	}
 	.filter-grid {
 		display: block;
+	}
+	.accordion-button {
+		color: #515151 !important;
+		border-bottom: 1px solid rgba(0, 0, 0, 0.1) !important;
+	}
+	.accordion-button:focus {
+		border-color: none !important;
+		box-shadow: none !important;
+	}
+	.accordion-button:not(.collapsed) {
+		background-color: white !important;
+	}
+	.accordion-button:not(.collapsed)::after {
+		color: #515151 !important;
 	}
 	.form-price__filter {
 		height: 45px;
@@ -90,17 +106,6 @@
 		flex-direction: column;
 		justify-content: flex-start;
 		align-items: flex-start;
-	}
-	.filter-price .title,
-	.filter-categories .title {
-		display: flex;
-		justify-content: space-between;
-		align-items: center;
-		width: 100%;
-		padding: 0 2px;
-		height: 40px;
-		border-bottom: 2px solid rgba(0, 0, 0, 0.1);
-		margin-bottom: 10px;
 	}
 	.filter-categories .button-category {
 		padding: 0.5rem 2rem;
