--- a/src/styles/cart.css
+++ b/src/styles/cart.css
@@ -74,6 +74,18 @@ p.total {
 	font-weight: bold;
 	color: #f85555;
 }
+.button-cart {
+	margin-top: 20px;
+	width: 100%;
+	height: 40px;
+	border: none;
+	border-radius: 8px;
+	background-color: #f85555;
+	color: white;
+	font-size: 14px;
+	font-weight: bold;
+	cursor: pointer;
+}
 
 @media screen and (min-width: 768px) {
 	.cart-modal {
